; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/q3_ui/extr_ui_setup.c_Setup_ResetDefaults_Draw.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/q3_ui/extr_ui_setup.c_Setup_ResetDefaults_Draw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SCREEN_WIDTH = common dso_local global i32 0, align 4
@PROP_HEIGHT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"WARNING: This will reset *ALL*\00", align 1
@UI_CENTER = common dso_local global i32 0, align 4
@UI_SMALLFONT = common dso_local global i32 0, align 4
@color_yellow = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [33 x i8] c"options to their default values.\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @Setup_ResetDefaults_Draw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @Setup_ResetDefaults_Draw() #0 {
  %1 = load i32, i32* @SCREEN_WIDTH, align 4
  %2 = sdiv i32 %1, 2
  %3 = load i32, i32* @PROP_HEIGHT, align 4
  %4 = mul nsw i32 %3, 0
  %5 = add nsw i32 356, %4
  %6 = load i32, i32* @UI_CENTER, align 4
  %7 = load i32, i32* @UI_SMALLFONT, align 4
  %8 = or i32 %6, %7
  %9 = load i32, i32* @color_yellow, align 4
  %10 = call i32 @UI_DrawProportionalString(i32 %2, i32 %5, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i32 %8, i32 %9)
  %11 = load i32, i32* @SCREEN_WIDTH, align 4
  %12 = sdiv i32 %11, 2
  %13 = load i32, i32* @PROP_HEIGHT, align 4
  %14 = mul nsw i32 %13, 1
  %15 = add nsw i32 356, %14
  %16 = load i32, i32* @UI_CENTER, align 4
  %17 = load i32, i32* @UI_SMALLFONT, align 4
  %18 = or i32 %16, %17
  %19 = load i32, i32* @color_yellow, align 4
  %20 = call i32 @UI_DrawProportionalString(i32 %12, i32 %15, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.1, i64 0, i64 0), i32 %18, i32 %19)
  ret void
}

declare dso_local i32 @UI_DrawProportionalString(i32, i32, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
